# claude_usage_live_statusbar

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
packaging/: claude-usage-bar.spec  entitlements.plist
packaging/assets/: icon.icns  make_icns.py
packaging/homebrew/: formula.rb
packaging/launchd/: com.claude-usage-bar.plist
scripts/: build.sh  dev.sh  release.sh
src/claude_usage_bar/: __init__.py  __main__.py  app.py  cli.py  config.py  keychain.py
src/claude_usage_bar/collector/: __init__.py  api_poller.py  fs_watcher.py  stats_reader.py
src/claude_usage_bar/metrics/: __init__.py  aggregator.py  costs.py
src/claude_usage_bar/renderer/: __init__.py  gauge_icon.py  linux.py  macos.py
tests/: test_aggregator.py  test_config.py  test_config_reload.py  test_costs.py  test_fs_watcher.py  test_keychain.py
